fixed problem with hamburger menu being clickable but no visible

--- a/chaschallenge-g4-v3.client/src/scss/Reusable-Components/_HamburgerTwo.scss
+++ b/chaschallenge-g4-v3.client/src/scss/Reusable-Components/_HamburgerTwo.scss
@@ -101,7 +101,7 @@ header {
 
     &.show {
       display: block;
-      //height: 50%;
+      height: 50%;
       opacity: 1;
     }
   }
@@ -111,7 +111,6 @@ header {
     bottom: 0;
     right: 0;
     background: rgb(119, 117, 117);
-    //display: none;
     width: 100%;
     height: 0%;
     transition: all 500ms cubic-bezier(0.62, 0.04, 0.3, 1.8);
@@ -121,7 +120,7 @@ header {
 
     &.slide {
       display: block;
-      //height: 50%;
+      height: 50%;
       opacity: 1;
     }
   }
